// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should fail to parse an object with the value 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected a string, received a number",
    "path": [
      "a",
    ],
    "received": "number",
  },
]
`;

exports[`should fail to parse non-objects 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received a string",
    "path": [],
    "received": "string",
  },
]
`;

exports[`should not accept arrays 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received an array",
    "path": [],
    "received": "array",
  },
]
`;

exports[`should not accept null values 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "object",
    "message": "Expected an object, received null",
    "path": [],
    "received": "null",
  },
]
`;

exports[`should only consider own properties 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "number",
    "message": "Expected a number, received undefined",
    "path": [
      "a",
    ],
    "received": "undefined",
  },
]
`;

exports[`the path property should work with nested objects 1`] = `
[
  {
    "code": "invalid_type",
    "expected": "string",
    "message": "Expected a string, received a number",
    "path": [
      "a",
      "b",
    ],
    "received": "number",
  },
]
`;
